# neura-lizard

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_K8S.md  docker-compose.yml  pyproject.toml  requirements.txt
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/scripts/: vite-favicons-plugin.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AppHeader.tsx  ChatInput.tsx  ChatMessageItem.tsx  ChatMessages.tsx  Logo.tsx  MessageRating.tsx  ModelSelect.tsx  ProviderSelect.tsx  SendStopButton.tsx  Sidebar.tsx  TypingIndicator.tsx
frontend/src/components/__tests__/: AppHeader.test.tsx  ChatInput.test.tsx  ChatMessageItem.test.tsx  ChatMessages.test.tsx  (+6 more)
frontend/src/store/: chatSlice.ts  index.ts
frontend/src/test/: setup.ts
frontend/src/types/: assets.d.ts  jest-dom.d.ts
k8s/: api.yaml  frontend.yaml  ingress.example.yaml  namespace.yaml  pgweb.yaml  postgres.yaml  secrets.example.yaml
src/neuralizard/: __init__.py  cli.py  config.py  db.py
src/neuralizard/api/: server.py
src/neuralizard/providers/: __init__.py  _usage.py  anthropic_provider.py  base.py  base_streaming.py  cohere_provider.py  deepseek_provider.py  google_provider.py  mistral_provider.py  openai_provider.py  perplexity_provider.py  xai_provider.py
tests/: test_anthropic_provider.py  test_basic.py  test_chat_api.py  test_deepseek_provider.py  test_google_provider.py  test_mistral_provider.py  test_openai_provider.py  test_perplexity_provider.py  test_xai_provider.py
(+4 files in other folders)
